# iterative-co-design

./: .coveragerc  .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_FIX_MAMBA_PERMUTATION.md  DEDUPLICATION_CHECKLIST.md  DEEP_ANALYSIS_ULTRATHINKING.md  DOCKER_GUIDE.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.reproducible  EXPERIMENT_QUICKSTART.md  FIX_CORRELATION_DIMENSION_MISMATCH.md  LICENSE  MANIFEST.in  Makefile  README.md  RESEARCH_LOG.md  SECURITY.md  check_mamba_import.py  check_syntax.py  code_duplication_audit.md  debug_mamba_layers.py  debug_perm.py  debug_permutation.py  diagnose_mamba_dim.py  docker-compose.cpu.yml  docker-compose.hub.yml  docker-compose.yml  environment.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  structure.md  tasks.md  (+3 more)
.github/workflows/: ci.yml  icd-ci.yml  stablehlo-build.yml  test.yml
.icd_cache/: 9cf528479ac260d0.perm_before.json  9cf528479ac260d0.stats_before.json
bridge/: README.md
configs/: bert.json  bert_base_sst2.yaml  bert_large.json  config.yaml  default.yaml  defaults.yaml  efficientnet_b0.json  gcn_arxiv.json  graphsage_arxiv.json  hds_default.yaml  iasp_defaults.yaml  mamba.json  mamba_2p8b.json  mamba_3b.json  mamba_3b_wikitext103.yaml  mamba_smoke_test.json  mamba_ssm_2.8b.json  mock.json  resnet50.json  trace.json
configs/ablations/: mamba_graph_correlation.json  mamba_graph_heuristic.json  mamba_graph_profiling.json
configs/dataset/: sst2.yaml  wikitext103.yaml  wikitext103_quick.yaml
configs/model/: bert_base.yaml  mamba_370m.yaml  mamba_3b.yaml
data/: LICENSES.md  download_datasets.sh
deploy/triton/: docker-compose.yml
docs/: API_Reference.md  Adapters_Spec.md  Artifact_Evaluation.md  CLEANUP_PLAN.md  CONFIGURING.md  Completeness_Scoring.md  Contrib_ADR.md  Correlation_Solver_Design.md  Cost_Spec.md  Cross_Vendor_Profiling.md  Dependency_DAG.mmd  Doc_Update_Backlog.md  Env_Fingerprint_Privacy.md  Experimental_Procedures.md  External_Reference_Policy.md  Graph_Construction_Spec.md  Graph_Spec.md  Hardware_Profiling_Integration.md  Hardware_Requirements.md  IASP_Config.md  ICD.md  IMPLEMENTATION_SUMMARY.md  Iterative_CoDesign_Checklist.md  Kernel_Contract.md  Literature_Review.md  MAMBA_PERMUTATION_PLAN.md  Observability_Spec.md  PAPER_DATA_MIGRATION.md  PRD.md  Pass_Doc.md  Production_Deployment_Guide.md  QUICKSTART.md  REPRODUCIBILITY.md  Regression_Baseline_Guide.md  Repro_Plan.md  Runtime_Memory_Plan.md  SAS.md  SBOM_Contrib.md  SBOM_License.md  SOP.md  (+19 more)
docs/api/: co_design.md  models.md  utils.md
docs/examples/: rca_sample.md
docs/schema/: env_fingerprint.json  hds_mask_state.json  iasp_capture_manifest.json  measurement_manifest.json  perm_cache_v1.json  run_config.schema.json
docs/tasks/: neurips2026_tasks.md
docs/templates/: rca_template.md
experiments/: FIX_MAMBA_IMPORT.md  INSTALL_MAMBA_KERNELS.md  README.md  RUNPOD_QUICKFIX.md  RUNPOD_QUICK_FIX.md  SCRIPT_ASSESSMENT.md
experiments/scripts/: aggregate_quantization.py  aggregate_table1.py  aggregate_table1_minimal.py  fix_directories.sh  run_experimental_matrix.py  run_mechanism_deepdive.sh  run_quantization_batch.sh  run_table1_batch.sh  runpod_quickstart.sh
figures/: .gitkeep
icd/: __init__.py  errors.py
icd/adapters/: kv.py  quant.py  sparsity.py  tvm_export.py
icd/cli/: main.py
icd/core/: cost.py  graph.py  graph_instrumented.py  graph_profiling.py  graph_pytorch.py  solver.py
icd/experiments/: __init__.py  _torch_utils.py  graph.py  hf.py  vision.py
icd/graph/: __init__.py  clustering.py  correlation.py  streaming_correlation.py
icd/hds/: __init__.py  checkpoint.py  layers.py  topk.py  training.py
icd/measure/: __init__.py  aggregate.py  bootstrap.py  cross_vendor.py  cuda_latency.py  gates.py  l2_ncu.py  latency.py  metrics_bridge.py  ncu.py  ncu_wrapper.py  nvml_logger.py  power.py  profiling.py  quality.py  report.py  rocm_profiler.py  runner_gpu.py  significance.py  vtune_profiler.py
icd/models/: __init__.py  gnn_cost_model.py
icd/runtime/: apply_pi.py  compare.py  export_sparse.py  nvml_logger.py  orchestrator.py  perm_cache.py  runner.py  runners.py  runners_hf.py  validation.py
icd/utils/: _jsonschema.py  data_collector.py  env.py  imports.py
notebooks/: 1_explore_correlation.ipynb  2_analyze_results.ipynb
scripts/: aggregate_table1.py  check_coverage.py  check_cuda_env.py  check_hardware_setup.py  check_test_dependencies.py  collect_artifacts.py  compare_seq_lengths.py  compare_tvm_results.py  compute_completeness.py  extract_mechanism_metrics.py  generate_all_figures.py  generate_correlation_matrix.py  generate_figure1.py  generate_figures.py  generate_paper_data.py  generate_tables.py  iasp_capture_dump.py  icd_mlir_opt.py  implementation_demo.py  install_mamba.sh  mediation_analysis.py  nsight_stub.py  performance_report.py  production_benchmark.py  profiling_target.py  quick_start_demo.py  quickstart.sh  repro_ablation.py  repro_ablation.sh  repro_codesign.sh  repro_large_models.sh  repro_smoke.sh  run_all_experiments.sh  run_autotvm.py  run_bandwidth_saturation.py  run_baseline_experiment.py  run_batch_size_sweep.py  run_cross_arch_ablation.py  run_cross_vendor.py  run_experiment.py  (+19 more)
src/: __init__.py
src/co_design/: __init__.py  apply.py  correlation.py  hds.py  iasp.py  iasp_rollback.py  layout_aware.py  modularity.py  pareto_watchdog.py  ptq.py  spectral.py
sweeps/: hds_tuning_sweep.yaml
tables/: cross_arch_ablation.tex  cross_vendor.tex  tvm_baseline.tex
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_cleanup.py  test_config.py  test_cross_vendor.py  test_distributed_iasp.py  test_feature_dim_infer.py  test_feature_dim_robust.py  test_hds.py  test_hf_mamba.py  test_iasp.py  test_iasp_safety.py  test_icd_graph_instrumented.py  test_icd_graph_pytorch.py  test_integration.py  test_logging.py  test_modularity.py  test_permutation_ndim.py  test_permutation_training.py  test_profiler.py  test_quantization.py  test_run_experiment.py  test_w_builder_tie_break.py  test_wrapper.py
(+122 files in other folders)
