[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repermute"
version = "0.1.0"
description = "Iterative HW–SW Co-Design — Layout Re-Optimization (mock pipeline + CLI)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ICD Authors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mrcha033/iterative-co-design"
Repository = "https://github.com/mrcha033/iterative-co-design.git"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=23",
]
experiments = [
  "transformers>=4.40",
  "accelerate>=0.30",
]

[project.scripts]
icd = "icd.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["icd*", "scripts*", "docs*", "tests*", "configs*"]
