[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repermute"
version = "0.1.0"
description = "Iterative HW–SW Co-Design — Layout Re-Optimization (mock pipeline + CLI)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ICD Authors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "datasets>=2.19",
  "evaluate>=0.4.2",
  "pynvml>=11.5",
  "jsonschema>=4.21",
]

[project.urls]
Homepage = "https://github.com/mrcha033/iterative-co-design"
Repository = "https://github.com/mrcha033/iterative-co-design.git"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=23",
]
experiments = [
  "transformers>=4.40",
  "accelerate>=0.30",
  "bitsandbytes>=0.43; platform_system == 'Linux'",
  "torch>=2.1",
]

[project.scripts]
icd = "icd.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["icd*", "scripts*", "docs*", "tests*", "configs*"]
